--- a/client/myapp/src/pages/profile/index.scss
+++ b/client/myapp/src/pages/profile/index.scss
@@ -50,3 +50,12 @@
 .profile-form button:hover {
     background-color: #3498db;
 }
+
+.success-message{
+    color: green;
+    font-style: italic;
+}
+.error-message{
+    color: red;
+    font-style: italic;
+}
