--- a/client/myapp/src/components/header/index.scss
+++ b/client/myapp/src/components/header/index.scss
@@ -88,8 +88,6 @@
     background-color: #fff;
     transition: none 1s;
 
-    display: flex;
-
     input {
         flex-grow: 1;
         border: none;
@@ -99,5 +97,42 @@
     &.active {
         top: 100%;
         transition: all 1s;
+    }
+
+    .search-results {
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background-color: white;
+        border: 1px solid #ccc;
+        border-top: none;
+        z-index: 999;
+        padding: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        max-height: 200px;
+        overflow-y: auto;
+
+        li {
+            padding: 5px 0;
+            border-bottom: 1px solid #eee;
+
+            &:last-child {
+                border-bottom: none;
+            }
+
+            a {
+                color: #333;
+                text-decoration: none;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+
+    .row {
+        display: flex;
+        padding: 20px;
     }
 }
