--- a/client/myapp/src/pages/register/register.scss
+++ b/client/myapp/src/pages/register/register.scss
@@ -5,7 +5,6 @@ $background-color: #f5f5f5;
 $input-border-color: #ddd;
 $input-focus-border-color: $primary-color;
 $button-color: #fff;
-$error-color: #e74c3c;
 
 .header__register {
     display: flex;
@@ -13,15 +12,17 @@ $error-color: #e74c3c;
     background-color: #FFF4FC;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-    // img {
-    //     max-width: 100%;
-    // }
+    img {
+        max-width: 100%;
+    }
 
     h1 {
+
         font-size: 22px;
         margin-top: 50px;
         position: relative;
         padding-left: 20px; // Adds space for the border
+
         border-left: 2px solid #0000003f; // Border thickness and color
         padding-top: 10px; // Adds space above the text
         padding-bottom: 10px;
@@ -29,8 +30,9 @@ $error-color: #e74c3c;
 }
 
 .register {
-    width: 100vw;
-    height: 85vh;
+    // background: url('/src/assets/ok.jpeg') no-repeat;
+    // width: 100vw;
+    // height: 85vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,7 +52,7 @@ $error-color: #e74c3c;
     .register__form {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 1.5rem;
 
         h1 {
             font-size: 2rem;
@@ -92,44 +94,51 @@ $error-color: #e74c3c;
                 }
             }
 
-            // &.sex {
-            //     display: flex;
-            //     gap: 1rem;
+            &.sex {
+                display: flex;
+                gap: 1rem;
 
-            //     input {
-            //         flex: 1;
-            //     }
+                input {
+                    flex: 1;
+                }
 
-            //     select {
-            //         flex: 1;
-            //     }
-            // }
+                select {
+                    flex: 1;
+                }
+            }
         }
 
-        // .remeber-forgot {
-        //     display: flex;
-        //     justify-content: space-between;
-        //     align-items: center;
-        //     font-size: 0.9rem;
+        .error {
+            color: red;
+            font-size: 0.875rem;
+            margin-top: 0.25rem;
+            margin-right: 190px;
+        }
 
-        //     label {
-        //         display: flex;
-        //         align-items: center;
+        .remeber-forgot {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 0.9rem;
 
-        //         input {
-        //             margin-right: 0.5rem;
-        //         }
-        //     }
+            label {
+                display: flex;
+                align-items: center;
 
-        //     a {
-        //         color: $primary-color;
-        //         text-decoration: none;
+                input {
+                    margin-right: 0.5rem;
+                }
+            }
 
-        //         &:hover {
-        //             text-decoration: underline;
-        //         }
-        //     }
-        // }
+            a {
+                color: $primary-color;
+                text-decoration: none;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
 
         .done {
             padding: 0.75rem;
@@ -144,17 +153,6 @@ $error-color: #e74c3c;
             &:hover {
                 background-color: darken($secondary-color, 10%);
             }
-        }
-
-        .none {
-            display: none;
-        }
-
-        .error-message {
-            color: $error-color;
-            font-size: 0.875rem;
-            margin-top: 10px;
-            // margin-bottom: 1rem;
         }
     }
 }
