--- a/client/myapp/src/pages/login/login.scss
+++ b/client/myapp/src/pages/login/login.scss
@@ -132,6 +132,16 @@ $input-border-radius: 5px;
           background-color: $button-hover-color;
         }
       }
+      .login-google {
+        display: flex;
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0.1, 0.3);
+        margin-top: 10px;
+
+        button {
+          width: 100%;
+        }
+      }
 
       .register-link {
         margin-top: 20px;
