--- a/client/myapp/src/components/header/index.scss
+++ b/client/myapp/src/components/header/index.scss
@@ -1,66 +1,107 @@
-
-.header{
+.header {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 0 200px;
     background-color: #FFF4FC;
-   
-   
-   position: fixed;
-   top: 0;
-   right: 0;
-   left: 0;
-   z-index: 10;
-   
-    &__nav{
-       ul{
-           display: flex;
-           gap: 30px;
-           list-style: none;
-           font-size: 20px;
-           li{
-               color: black;
-               a{
-                   text-decoration: none;
-                   color: black;
-               }
-           }
-           .sbv{
-               padding-right: 200px;
-               display: flex;
-               gap: 80px;
-               font-size: 20px;
-           }
-       }
+
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
+
+    &__nav {
+        ul {
+
+            display: flex;
+            gap: 30px;
+            list-style: none;
+            font-size: 20px;
+
+            li {
+                color: black;
+
+                a {
+                    text-decoration: none;
+                    color: black;
+                }
+            }
+
+            .sbv {
+                padding-right: 200px;
+                display: flex;
+                gap: 80px;
+                font-size: 20px;
+            }
+        }
     }
-   
-    
-   }
-   
-   .header__icon{
-       cursor: pointer;
-       display: flex;
-       gap: 20px;
-   }
-   
-   .header__search{
-       position: absolute;
-         top:-100%;
-         left: 0;
-         right: 0;
-         padding: 15px 200px;
-         background-color: #fff;
-         transition: none 1s;
-   
-         display: flex;
-         input{
-           flex-grow: 1;
-           border: none;
-           outline: none;
-         }
-         &.active{
-           top: 100%;
-           transition: all 1s;
-         }
+
+
+}
+
+.header__icon {
+    position: relative;
+    //
+    cursor: pointer;
+    display: flex;
+    gap: 20px;
+
+    .userdropdow {
+        background: #ffff;
+        display: block;
+        position: absolute;
+        margin-top: 80px;
+
+
+        width: 150px;
+        z-index: 9;
+        padding: 8px 5px 5px 5px;
+        transition: all, 0.3s;
+        opacity: 0;
+        visibility: hidden;
+
+        li {
+            color: black;
+        }
+
+        :hover {
+            color: #fff;
+        }
+
+
     }
+
+    li:hover .userdropdow {
+        opacity: 1;
+        visibility: visible;
+    }
+
+
+}
+
+.header__search {
+    position: absolute;
+    top: -100%;
+    left: 0;
+    right: 0;
+    padding: 15px 200px;
+    background-color: #fff;
+    transition: none 1s;
+
+    display: flex;
+
+    input {
+        flex-grow: 1;
+        border: none;
+        outline: none;
+    }
+
+    &.active {
+        top: 100%;
+        transition: all 1s;
+    }
+
+
+}
