--- a/client/myapp/src/pages/login/login.scss
+++ b/client/myapp/src/pages/login/login.scss
@@ -30,9 +30,9 @@ $input-border-radius: 5px;
 }
 
 .login-container {
-  // background: url('/src/assets/ok.jpeg') no-repeat;
-  // width: 100vw;
-  // height: 85vh;
+
+  width: 100vw;
+  height: 85vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,8 +59,11 @@ $input-border-radius: 5px;
       }
 
       .input-group {
+        margin-top: 15px;
         width: 100%;
-        margin-bottom: 15px;
+        margin-bottom: -10px;
+        padding: 10px;
+        border-radius: 5px;
 
         input {
           width: 100%;
@@ -69,11 +72,26 @@ $input-border-radius: 5px;
           border-radius: $input-border-radius;
           box-sizing: border-box;
         }
-        .error{
-          color: red;
-          margin-top: 5px;
-        }
       }
+
+      // login.scss
+
+      .input-group.error {
+        border: 1px solid red;
+
+        width: 100%;
+
+      }
+
+      .error-message {
+        color: red;
+        font-size: 16px;
+        margin-top: 15px;
+        margin-bottom: -15px;
+        width: 100%;
+        margin-left: 10px;
+      }
+
 
       .remember-forgot {
         display: flex;
@@ -114,16 +132,6 @@ $input-border-radius: 5px;
           background-color: $button-hover-color;
         }
       }
-      .login-google {
-        display: flex;
-        border-radius: 10px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0.1, 0.3);
-        margin-top: 10px;
-
-        button {
-          width: 100%;
-        }
-      }
 
       .register-link {
         margin-top: 20px;
@@ -147,3 +155,4 @@ $input-border-radius: 5px;
     }
   }
 }
+
