--- a/client/myapp/src/pages/product/product1.scss
+++ b/client/myapp/src/pages/product/product1.scss
@@ -112,6 +112,49 @@
     padding: 10px 20px;
   }
 }
+.from-control{
+  text-align: center;
+  margin-top: 90px;
+}
+.input-group {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+
+  button {
+    background-color: #e67e22;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:hover {
+      background-color: #d35400;
+    }
+
+    &:first-child {
+      margin-right: 10px;
+    }
+
+    &:last-child {
+      margin-left: 10px;
+    }
+  }
+  span {
+    font-size: 16px;
+    padding: 0 10px;
+    width: 30px;
+    text-align: center;
+    margin-top:110px;
+  }
+}
 
 .info__detail {
 
